--- a/modules/hotel-bundle2/src/main/res/layout/item_image_and_text.xml
+++ b/modules/hotel-bundle2/src/main/res/layout/item_image_and_text.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:background="@android:color/white"
-             android:padding="5dp"
-             android:transitionGroup="false"
-             android:id="@+id/fl_item"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/white"
+    android:padding="5dp"
+    android:transitionGroup="false"
+    android:id="@+id/fl_item">
 
 <!--    <FrameLayout-->
 <!--        android:layout_width="match_parent"-->
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/tmp"/>
+            tools:src="@drawable/tmp"/>
 
         <TextView
             android:id="@+id/tv_text"
@@ -35,7 +35,7 @@
             android:textColor="@color/apricot"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="你好吗我很好，她不好"/>
+            tools:text="你好吗我很好，她不好"/>
     </LinearLayout>
 
 </FrameLayout>
