--- a/modules/main-bundle/src/main/res/xml/shortcuts.xml
+++ b/modules/main-bundle/src/main/res/xml/shortcuts.xml
@@ -27,7 +27,7 @@
 
         <intent
             android:action="android.intent.action.VIEW"
-            android:targetClass="com.electrolytej.ad.page.shake.ShakeActivity"
+            android:targetClass="com.electrolytej.ad.page.gesture.RotationVectorActivity"
             android:targetPackage="com.electrolytej.spacecraft" />
         <categories android:name="android.shortcut.conversation" />
     </shortcut>
