--- a/modules/ad-bundle/src/main/res/layout/activity_sensor.xml
+++ b/modules/ad-bundle/src/main/res/layout/activity_sensor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -71,6 +72,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="210dp" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_gravity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="重力传感器(Gravity)"
+                    android:textColor="#3D7DB2"
+                    android:textSize="18sp" />
+
+                <com.electrolytej.widget.LineChartView
+                    android:id="@+id/gravityChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
@@ -79,4 +101,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:visibility="gone" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:elevation="10dp"
+        app:srcCompat="@android:drawable/ic_menu_rotate"
+        tools:ignore="ContentDescription" />
+
 </FrameLayout>
